more fixes for bottom alignment

--- a/resources/stylus/section/work.styl
+++ b/resources/stylus/section/work.styl
@@ -1,4 +1,8 @@
 .section.work
+  position fixed
+  height 100%
+  width 100%
+  overflow hidden
   background-color gc(blue1)
   > .logo > svg > polygon
     fill gc(white1)
@@ -87,6 +91,7 @@
     display none
   .section.work > .inner > .gigs.gigs_mobile
     display block
+/*
   .section.work > .inner > .copys
     top 70vh
     left 30px
@@ -95,3 +100,4 @@
   .section.work > .inner > .copys
     top 60vh
     left 30px
+*/
